[gd_scene load_steps=7 format=1]

[ext_resource path="res://UI/Desktop/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/TransitionHelper.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/processed_fonts/pause_menu_header.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Assets/processed_fonts/turn_subtext.fnt" type="BitmapFont" id=4]
[ext_resource path="res://UI/Desktop/SmallTextureLabelButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/BackButton.tscn" type="PackedScene" id=6]

[node name="PauseMenu" type="Node2D"]

z/z = 100
z/relative = false
script/script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="T" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="T"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 132.0
margin/right = 1024.0
margin/bottom = 232.0
custom_fonts/font = ExtResource( 3 )
text = "MENU"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TurnSubtext" type="RichTextLabel" parent="T"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 194.0
margin/right = 1024.0
margin/bottom = 244.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="LevelSelectButton" parent="T" instance=ExtResource( 5 )]

transform/pos = Vector2( 516, 403 )

[node name="SettingsButton" parent="T" instance=ExtResource( 5 )]

transform/pos = Vector2( 516, 322 )

[node name="Label" parent="T/SettingsButton/Toppings"]

text = "SETTINGS"

[node name="ExitButton" parent="T" instance=ExtResource( 5 )]

transform/pos = Vector2( 516, 484 )

[node name="Label" parent="T/ExitButton/Toppings"]

text = "EXIT GAME"

[node name="BackButton" parent="T" instance=ExtResource( 6 )]

transform/pos = Vector2( 517, 567 )

[node name="SetProgress" type="Label" parent="T"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 662.0
margin/top = 738.0
margin/right = 1022.0
margin/bottom = 764.0
custom_fonts/font = ExtResource( 4 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


[editable path="T/SettingsButton"]
[editable path="T/ExitButton"]
